--- a/src/mod_stats_by_aircraft/templates/pilot_aircraft.html
+++ b/src/mod_stats_by_aircraft/templates/pilot_aircraft.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% load i18n staticfiles tz stats filters %}
-{% block title %}{{ aircraft_bucket.aircraft.name }} / {{ block.super }}{% endblock title %}
+{% block title %} {{ player.nickname }} / {{ aircraft_bucket.aircraft.name }} / {{ block.super }}{% endblock title %}
 
 {% block nav_tabs %}
-{% include 'inline/aircraft_tabs.html' %}
+{% include 'inline/extended_pilot_tabs.html' %}
 {% endblock nav_tabs %}
 
 {% block content %}
@@ -12,6 +12,7 @@
         <div class="profile_name">
             {{ aircraft_bucket.aircraft.name }}
         </div>
+        <div class="content_title_sm">{% trans 'pilot' context 'pilot_awards' %}: {{ player.nickname }}</div>
         <div class="profile_head">
             <div class="head_left">
                 {% if aircraft_bucket.coalition == 1 %}
@@ -146,11 +147,6 @@
                 <img src="{% static 'img/icons/big/acc.png' %}" width="" height="" title="" alt="">
                 <div class="text">{% trans 'Gunnery Accuracy' %}</div>
                 <div class="num">{{ aircraft_bucket.accuracy }}</div>
-            </div>
-            <div class="item">
-                <img src="{% static 'img/icons/big/streak_max.png' %}" width="" height="" title="" alt="">
-                <div class="text">{% trans 'Elo' %}</div>
-                <div class="num">{{ aircraft_bucket.elo }}</div>
             </div>
             <div class="item">
                 <img src="{% static 'img/icons/big/rating.png' %}" width="" height="" title="" alt="">
@@ -507,7 +503,7 @@
             {% endif %}
         </div>
 
-        <div class="clearfix"></div>
+                <div class="clearfix"></div>
 
 
         {% if ammo_breakdown.given|length > 0 %}
@@ -674,8 +670,11 @@
         <div class="info">
             <div>
                 {% blocktrans trimmed %}
+                Due to technical reasons, kills from your turret gunners are not counted towards the killboard. Plane and pilot lethality are also affected. </br>
+                {% endblocktrans %}
+                {% blocktrans trimmed %}
                 ★ This data is pulled purely from sorties where this plane was the sole source of damage. </br>
-                ⛤ This data is pulled purely from sorties where this plane was damaged by a single enemy (one aircraft/tank/AA/etc.). Only weapon configurations which account for at least 1% of deaths are displayed.</br>
+                ⛤ This data is pulled purely from sorties where this plane was damaged by a single enemy (one aircraft/tank/AA/etc.).</br>
                 {% endblocktrans %}
                 {% blocktrans trimmed %}
                 * Plane Durability is percent of sorties the plane survived after taking damage. </br>
